Fixed the spacing

--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@
   p {
       margin-left: auto;
       margin-right: auto;
+      width: 80%;
     }
 /* HOMEPAGE CODE */
     .button2 {
@@ -30,7 +31,6 @@
       margin-left: auto;
       margin-right: auto;
       padding-bottom: 2em;
-      width: 80%;
     }
 
     .projects #dashboard {
@@ -63,6 +63,8 @@
   .container {
     font-size: 1.25em;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 80%;
   }
 
@@ -184,7 +186,6 @@ p {
   font-weight: 300;
   font-size: 1em;
   line-height: 2em;
-  width: 80%;
 }
 
 img {
@@ -413,7 +414,6 @@ footer {
    font-size: .2em;
    justify-content: center;
    list-style-type: none;
-   width: 80%;
 }
 
 .copyright {
